# surm

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile
examples/hello_world/: main  surm.yaml
src/: CMakeLists.txt  autodetection.hpp  builder.hpp  depsmanager.hpp  log.hpp  log_utils.hpp  main.cpp  parser.hpp  section_deps.hpp  section_executable.hpp  section_project.hpp  section_targets.hpp  section_tasks.hpp  surmfile.hpp  util.hpp  validator.hpp
src/log/: CMakeLists.txt
src/stages/: CMakeLists.txt  autodetection.hpp  builder.hpp  depsmanager.hpp
src/surmfile/: CMakeLists.txt  section_deps.hpp  section_targets.hpp  section_tasks.hpp
tests/: test_runner.py
tests/tests_source/auto_with_no_sources/: .test_command  .test_output
tests/tests_source/dont_detect_sources_from_deps/: .test_command  .test_output  main.cpp
tests/tests_source/fetch_multiple_single_headers/: .test_output  main.cpp  surm.yaml
tests/tests_source/fetch_one_header_only/: .test_command  surm.yaml
tests/tests_source/missing_source/: .test_output  surm.yaml
tests/tests_source/multi_file_executable_auto/: .test_output  main.cpp
tests/tests_source/multi_file_executable_auto/src/: fn_1.hpp
tests/tests_source/one_file_executable_auto/: .test_command  .test_output  main.cpp
tests/tests_source/one_file_executable_explicit/: .test_command  surm.yaml
tests/tests_source/parse_and_print_project/: .test_command  .test_output  surm.yaml
tests/tests_source/parse_project/: .test_output  surm.yaml
tests/tests_source/parse_targets/: .test_output  surm.yaml
(+1 files in other folders)
